# meta_scaler

./: .gitignore  AGENT.md  DEPLOY_TO_HF_SPACE.sh  Dockerfile  MASTER_BUILD_GUIDE.md  PROGRESS.md  README.md  generate_plots.py  openenv.yaml  pyproject.toml  requirements.runtime.txt  requirements.txt  train.py  train_colab.ipynb  train_kaggle.py
mock_services/: docker-compose.yml
mock_services/auth/: Dockerfile  main.py
mock_services/cache/: Dockerfile  main.py
mock_services/db/: Dockerfile  main.py
mock_services/notification/: Dockerfile  main.py
mock_services/payment/: Dockerfile  main.py
server/: app.py
