[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-sre"
version = "1.0.0"
description = "AdaptiveSRE benchmarks theory of mind in agentic systems."
readme = "AGENT.md"
requires-python = ">=3.11"
authors = [
  { name = "AdaptiveSRE Team" }
]
dependencies = [
  "fastapi==0.115.0",
  "uvicorn==0.30.0",
  "pydantic==2.7.0",
  "httpx==0.27.0",
  "openai==1.40.0",
  "gradio==4.44.0",
  "docker==7.1.0",
  "openenv-core"
]

[project.scripts]
server = "server.app:main"
